--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-	"name": "laura_s_fav_theme-color-theme",
-	"displayName": "HB_Laura",
-	"publisher": "Valentin",
+	"name": "laura-s-birthday",
+	"displayName": "HB_Laura!!",
+	"publisher": "VL-id1999",
 	"description": "A custom theme for VS Code",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"engines": {
 		"vscode": "^1.0.0"
 	},
-	"contributes": {
-		"themes": [
-			{
-				"label": "laura_s_fav_theme",
-				"uiTheme": "vs-dark",
-				"path": "C:/Users/Utilisateur/Documents/Themes/laura-s-fav-theme-color-theme.json"
-
-				
-			}
-		]
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Larcheveque-Valentin/VsCodeThemes"
+	},
+	
+	"keywords": [
+		"theme",
+		"dark theme",
+		"laura"
+	],
+	"dependencies": {
+		"vsce": "^2.15.0"
+	},
+	"__metadata": {
+		"isApplicationScoped": false,
+		"installedTimestamp": 1718916979762,
+		"pinned": false,
+		"source": "gallery",
+		"id": "3d248944-c5f2-460c-9217-328cbb91dcde",
+		"publisherId": "7c71b077-cbe2-445e-ad0b-c88fe648f0ba",
+		"publisherDisplayName": "VLPublisher",
+		"targetPlatform": "undefined",
+		"updated": true,
+		"isPreReleaseVersion": false,
+		"hasPreReleaseVersion": false,
+		"preRelease": false
 	}
 }
